<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_store_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_producto"
            android:icon="@drawable/ic_menu_producto"
            android:title="Add Producto" />

        <item
            android:id="@+id/nav_ventas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Pedidos" />

        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_users"
            android:title="Usuarios" />

        <item
            android:id="@+id/nav_carrito"
            android:icon="@drawable/ic_car"
            android:title="Carrito" />

        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/ic_menu_salir"
            android:title="@string/menu_exit" />
    </group>
</menu>