<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProductEdit"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/codigofire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="ID PRODUCTO"
                android:gravity="center">
            </TextView>

            <EditText
                android:id="@+id/edt_producto_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_NAME">

            </EditText>

            <EditText
                android:id="@+id/edt_categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_categoria">

            </EditText>

            <EditText
                android:id="@+id/edt_precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_PRECIO">

            </EditText>

            <CheckBox
                android:id="@+id/chb_producto_enstock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_available"></CheckBox>

<!--            <Button
                android:id="@+id/btn_producto_ubicacion2"
                android:background="@drawable/custom_button2"
                android:layout_width="match_parent"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/txt_Location"></Button>

            <TextView
                android:id="@+id/tev_producto_ubicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ></TextView>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="100">
                <Button
                    android:id="@+id/btn_producto_seleccionar"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/custom_button2"
                    android:text="@string/txt_selc.img"></Button>

                <Button
                    android:id="@+id/btn_producto_subir"
                    android:background="@drawable/custom_button2"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_sub_imag"></Button>
            </LinearLayout>


            <ImageView
                android:layout_gravity="center"
                android:id="@+id/img_produto_imagen"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:src="@drawable/default_image">

            </ImageView>

            <Button
                android:id="@+id/btn_producto_guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@null"
                android:background="@drawable/custom_button1"
                android:text="@string/txt_saveprod"></Button>
        </LinearLayout>

    </ScrollView>


</LinearLayout>