<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.grupo10.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.grupo10.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.grupo10.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_producto"
        android:name="com.example.grupo10.ProductFragment"
        android:label="Producto"
        tools:layout="@layout/fragment_product" />
    <fragment
        android:id="@+id/nav_carrito"
        android:name="com.example.grupo10.ConsultarCarrito"
        android:label="Producto"
        tools:layout="@layout/fragment_consultar_carrito" />
    <fragment
        android:id="@+id/nav_ventas"
        android:name="com.example.grupo10.ConsultarVentas"
        android:label="Ventas"
        tools:layout="@layout/fragment_consultar_ventas" />
    <fragment
        android:id="@+id/nav_users"
        android:name="com.example.grupo10.ConsultarUsers"
        android:label="Ventas"
        tools:layout="@layout/fragment_consultar_users" />
    <fragment
        android:id="@+id/nav_salir"
        android:name="com.example.grupo10.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>